<resources>
    <string name="app_name">工厂测试</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bt_auto_test">自动测试</string>
    <string name="bt_manual_test">手动测试</string>
    <string name="bt_test_report">测试报告</string>
    <string name="bt_reboot">恢复出厂设置</string>
    <string name="title_activity_manual_test">手动测试</string>
    <string name="bt_pass">通过</string>
    <string name="bt_fail">失败</string>
    <string name="item_keymotor">按键/马达</string>
    <string name="item_simcard">打电话\n/卡检测</string>
    <string name="item_TouchPanel">触摸屏</string>
    <string name="item_LCD">LCD</string>
    <string name="item_GssorGyroCal">加速度\n/陀螺仪校准</string>
    <string name="item_Flash">前/后闪光灯</string>
    <string name="item_VersionInfo">版本/充电</string>
    <string name="item_Loudspeaker">喇叭测试</string>
    <string name="item_Ringtone">麦克/听筒</string>
    <string name="item_SensorShow">传感器</string>
    <string name="item_FM">FM</string>
    <string name="item_NFC">NFC</string>
    <string name="item_SystemCamera">前后相机</string>
    <string name="item_Headset">耳机测试</string>
    <string name="item_hall_switch">霍尔开关</string>
    <string name="item_lcdbacklight">LCD背光</string>
    <string name="item_ledkeypad">LED\n/按键背光</string>
    <string name="item_wifibt">WIFI</string>
    <string name="item_gps">GPS</string>
    <string name="wifibt">WIFI</string>
    <string name="lcd_tips">图片显示是否均匀正常</string>
    <string name="nfc_readCard">1.读卡模式</string>
    <string name="nfc_CardSimulate">2.卡模拟测试</string>
    <string name="nfc_pass">通过</string>
    <string name="nfc_readCardTips">(请将手机靠近卡)</string>
    <string name="nfc_CardSimulateTips">(请将手机靠近读卡器)</string>
    <string name="nfc_btTips">(至少15cm)</string>
    <string name="hqa_nfc_dialog_warn">Error</string>
    <string name="hqa_nfc_connect_fail">Connect server fail</string>
    <string name="hqa_nfc_dialog_warn_message">Please turn off NFC first</string>
    <string name="hqa_nfc_start">Start</string>
    <string name="hqa_nfc_stop">Stop</string>
    <string name="hqa_nfc_virtual_card_function">Virtual card function</string>
    <string name="hqa_nfc_typea"> TypeA</string>
    <string name="hqa_nfc_typeb"> TypeB</string>
    <string name="hqa_nfc_typeb2"> TypeB\'</string>
    <string name="hqa_nfc_typef"> TypeF</string>
    <string name="hqa_nfc_212"> 212kbps</string>
    <string name="hqa_nfc_424"> 424kbps</string>
    <string name="hqa_nfc_select_all">Default</string>
    <string name="hqa_nfc_clear_all">Clear All</string>
    <string name="hqa_nfc_return">Return</string>
    <string name="hqa_nfc_run_back">Run in Background</string>
    <string name="hqa_nfc_dialog_wait_message">Please Waiting</string>
    <string name="hqa_nfc_tip_open">请先打开NFC!</string>
    <string name="hqa_nfc_tip_close">请先关闭NFC!</string>
    <string name="hqa_nfc_tip_noNFC">请确认此机型是否有NFC功能！</string>
    <string name="nfc_fail">失败</string>
    <string name="nfc_bt_starTest">测试</string>
    <string name="nfc_bt_inTesting">测试中..</string>
    <string name="dlg_noantenna_text">您需要使用耳机来充当天线，请插入耳机。</string>
    <string name="dlg_noantenna_title">插入耳机</string>
    <string name="btn_yes">是</string>
    <string name="btn_no">确认</string>
    <string name="default_station_name">New Channel</string>
    <string name="openDevice_success">打开FM设备成功！\n\t\t\t播放中...</string>
    <string name="openDevice_fail">打开FM设备失败！</string>
    <string name="fmIsOpening">正在打开FM设备...</string>
    <string name="nfc_inTesting">测试中..</string>
    <string name="nfc_testfinish">测试完毕！</string>
    <string name="fm_unit">MHz</string>
    <string name="tv_gsgyrocal_title">校准加速度/陀螺仪</string>
    <string name="tv_gsgyrocal_info">请先将手机放置于水平桌面</string>
    <string name="bt_gsgyrocal_start">开始校准</string>
    <string name="tv_gsgyrocal_hint_gyro">2.陀螺仪校准(成功-变绿)</string>
    <string name="tv_gsgyrocal_hint_gsensor">1.加速度校准(成功-变绿)</string>
    <string name="tv_use_sensor_info">如果当前手机没有相应的传感器，请取消勾选对应传感器，避免影响测试！</string>
    <string name="cal_status_un">未   校   准</string>
    <string name="cal_status_ing">校   准   中</string>
    <string name="cal_status_success">校准成功</string>
    <string name="cal_status_fail">校准失败</string>
    <string name="tv_gssor_not_available">该手机不支持加速度传感器！</string>
    <string name="tv_gyro_not_available">该手机不支持陀螺仪！</string>
    <string name="tv_mssor_not_available">该手机不支持地磁传感器！</string>
    <string name="tv_lssor_not_available">该手机不支持光传感器！</string>
    <string name="tv_pssor_not_available">该手机不支持距离传感器！</string>
    <string name="tv_use_gyroscope">陀螺仪</string>
    <string name="tv_use_gsensor">加速度传感器</string>
    <string name="tv_gssor">1.加速度传感器：</string>
    <string name="tv_gssor1">（改变手机放置的正、反、上、下、左、右，是否变绿）</string>
    <string name="tv_gryo">2.陀    螺    仪:</string>
    <string name="tv_mssor">3.磁场传感器:</string>
    <string name="tv_lssor">4.光线传感器:</string>
    <string name="tv_lssor1">（当手挡住器件光线时,屏幕颜色是否变绿）</string>
    <string name="tv_pssor">5.距离传感器:</string>
    <string name="tv_pssor1">（当手靠近器件上方时,屏幕颜色是否变蓝）</string>
    <string name="toast_cal_success">校准成功</string>
    <string name="toast_cal_failed">校准失败</string>
    <string name="cal_gyro_start">陀螺仪：</string>
    <string name="cal_gssor_start">加速度传感器：</string>
    <string name="tv_sensor_is_change">(是否都跳动)</string>
    <string name="report_title">测试报告</string>
    <string name="report_pass_item">正确项</string>
    <string name="report_fail_item">错误项</string>
    <string name="report_uncheck_item">未检测项</string>
    <string name="report_no_item">无</string>
    <string name="btn_clear_state">清除数据</string>
    <string name="auto_test_finish">自动测试完成！</string>
    <string name="touch_panel_test_success">触摸屏测试完成！</string>
    <string name="tp_test_pass_hint">通过！点击屏幕继续</string>
    <string name="Version">版本信息</string>
    <string name="Battery">充电状态</string>
    <string name="sw_ver_">SW Ver</string>
    <string name="barcode_">BarCode</string>
    <string name="imei1_">IMEI1</string>
    <string name="imie2_">IMEI2</string>
    <string name="bt_addr_">BT ADDR</string>
    <string name="wifi_mac_">WIFI MAC</string>
    <string name="bulidtime_">BulidTime</string>
    <string name="_batteryCharging">充电变绿</string>
    <string name="_chargingVoltage">电池电压:</string>
    <string name="_chargingCurrent">充电电流</string>
    <string name="_batteryCurrent">电池电流:</string>
    <string name="chargingVol">充电电压</string>
    <string name="discharging">正在放电</string>
    <string name="chargingUSB">正在充电（USB）</string>
    <string name="chargingAC">正在充电（AC）</string>
    <string name="plug_charged">请插入充电器测试充电情况。</string>
    <string name="_headset_listen">耳机听声</string>
    <string name="_inHeadset">2.插入耳机</string>
    <string name="_headset_loud">这时外放</string>
    <string name="_isNorml">（是否正常）</string>
    <string name="_isNoVould">（是否无声）</string>
    <string name="_loud_Music">1.外放测试</string>
    <string name="ishassound">请判断:现在耳机与外放的是否正常。</string>
    <string name="isloudspeakernomal">外放播放正常后，\n请插入耳机继续测试。</string>
    <string name="isloudnomal">请判断外放正常，再插入耳机测试。</string>
    <string name="headset_connected">已插入</string>
    <string name="headset_unconnected">未插入</string>
    <string name="music_file_no_exits">指定音乐文件不存在SD卡根目录</string>
    <string name="SDcard_no_exits">音乐文件不存在与SD卡，播放预置歌曲</string>
    <string name="string_error_report">错误报告</string>
    <string name="string_can_not_copy">无法复制</string>
    <string name="play_music">播放曲目:</string>
    <string name="play_music_path">T卡: testsong</string>
    <string name="play_music_exits">（是否存在）</string>
    <string name="exits">存在</string>
    <string name="no_exits">不存在</string>
    <string name="file_no_exits">文件不存在</string>
    <string name="_second_mic">副MIC</string>
    <string name="_close">（暂不支持）</string>
    <string name="_open">（已经打开）</string>
    <string name="_main_second">主副</string>
    <string name="judge_loudspeaker">插入耳机后请判断:</string>
    <string name="_mic_main">主MIC</string>
    <string name="_headset_mic_juge">（请对着耳麦吹气，耳机听筒发声，并判断是否正常）</string>
    <string name="hear_From_ringtone">请从听筒听声。</string>
    <string name="test_headset">请开始测试,对耳麦吹气。</string>
    <string name="mic_test_tip">（请先点击按钮录音，再听筒听声判断是否正常）</string>
    <string name="mic_test_tip1">（请对麦克风说话，听筒听声判断是否正常）</string>
    <string name="insert_the_headset">请先插入耳机,再进行测试！</string>
    <string name="out_the_headset">请先拔出耳机,再进行测试!</string>
    <string name="tip">提示</string>
    <string name="tip_ok">确认</string>
    <string name="tvrefmictest">副麦测试</string>
    <string name="refmic">副麦</string>
    <string name="themainMICtest">主麦测试</string>
    <string name="MAIN_Please_speaking">请对主麦说话。</string>
    <string name="Stop_talking_and_playing">停止说话  播放录音</string>
	<string name="Stop_playing">停止播放</string>
    <string name="headset">耳机检测</string>
    <string name="_ununited">未插入</string>
    <string name="_speakToHeadsetMic">2.耳麦吹气检测:</string>
    <string name="_pressHeadset">3.耳机按键检测（变绿）:</string>
    <string name="headsetstate">1.耳机插入:</string>
    <string name="head_tip">请插入耳机进行测试！</string>
    <string name="_headin">未插入</string>
    <string name="inside_Headset">请插入耳机进行测试。</string>
    <string name="press_key_no">未按按键</string>
    <string name="press_key_yes">已按按键</string>
    <string name="_mainCamera_TAG">主:拍照标志</string>
    <string name="_secondCamera_TAG">副:拍照标志</string>
    <string name="_flash_TAG">闪光标志</string>
    <string name="checkCamera">设备不支持相机功能</string>
    <string name="changeCamera">点击按钮,可切换前后摄像头!</string>
    <string name="Flashfinished">闪光完成</string>
    <string name="Mainpicturessuccess">主摄像头:拍照完成</string>
    <string name="Mainpicturesfailure">主摄像头:拍照失败</string>
    <string name="SUBpicturessuccess">副摄像头:预览完成</string>
    <string name="SUBpicturesfailure">副摄像头:预览失败</string>
    <string name="back_camera">1.后置摄像头:</string>
    <string name="front_camera">2.前置摄像头:</string>
    <string name="open_tag">打开</string>
    <string name="takepicture_tag">未进行</string>
    <string name="Main">主</string>
    <string name="SUB">副</string>
    <string name="bcamera_no_exits">后置相机不存在</string>
     <string name="camera_no_exits">相机不存在</string>
    <string name="bcamera_no_exits_flash">后置相机不存在，闪光灯异常。</string>
    <string name="fcamera_no_exits_flash">前置相机不存在，闪光灯异常。</string>
    <string name="flash_exception">打开闪光灯异常。</string>
    <string name="fcamera_no_exits">前置相机不存在</string>
    <string name="success">成功</string>
    <string name="fail">失败</string>
    <string name="noprocess">未进行</string>
    <string name="fenge">：</string>
    <string name="judge">判断：</string>
    <string name="open">打开</string>
	<string name="had_open">已打开</string>
	<string name="had_close">已关闭</string>
	<string name="close">关闭</string>
	<string name="front_flash">前置闪光灯</string>
	<string name="openfront_flash">打开前置闪光灯</string>
	<string name="openback_flash">打开后置闪光灯</string>
	<string name="flash_back">后置闪光灯</string>
	<string name="flashled_tip">（请点击按钮，切换闪光灯，进行判断）</string>
	<string name="flashled_unsupport">该手机不支持闪光灯！</string>
    <string name="rebootphone">重置手机</string>
    <string name="reboot_tip">格式化手机存储</string>
    <string name="reboot_tip1">清除手机存储中的全部数据，例如音乐或照片</string>
    <string name="reboot_tip_final">确定清除个人信息和所有存储吗？请注意，此操作无法撤销！</string>
    <string name="hello">Device reboot Demo</string>
    <string name="disreboot">取消恢复出厂设置</string>
    <string name="ablereboot">激活恢复出厂设置</string>
    <string name="ckdisablereboot">取消格式化手机</string>
    <string name="reboot_message">警告：\n此操作为恢复手机出厂设置，激活后将清除手机上的所有数据，请慎用！</string>
    <string name="reset_factory_ok">确定</string>
    <string name="reset_factory_cancel">取消</string>
    <string name="keytest">按键检测</string>
    <string name="motortest">马达检测</string>
    <string name="mtvvolumeup">音量上</string>
    <string name="mtvvolumedown">音量下</string>
    <string name="mtvmenu">菜单</string>
    <string name="mtvhome">主页</string>
    <string name="mtvback">后退</string>
    <string name="mbtmotorStop">停止马达</string>
</resources>