<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floralwhite"
    android:orientation="vertical" >
    
    <RelativeLayout 
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"   >
     <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/flash_back"
        android:gravity="center"
        style="@style/TextTitle"/>
     </RelativeLayout>
     
    
         
         <TextView 
             android:id="@+id/back_cameraflash"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/textStyle" 
             android:layout_marginTop="20dp"
			 android:layout_gravity="center"
             android:text="@string/had_open" />
     
     
      <View
        android:layout_width="fill_parent"
        android:layout_height="6dip"
       
        android:layout_marginTop="80dp"
        android:background="@color/green" />
      
      <RelativeLayout 
        android:layout_width="fill_parent"
		android:layout_height="wrap_content"   >
	     <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="30dp"
	        android:gravity="center"
	        android:text="@string/front_flash"
	        style="@style/TextTitle"/>
     </RelativeLayout>
       
   
         <TextView 
             android:id="@+id/front_cameraflash"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/textStyle" 
             android:layout_marginTop="20dp"
			 android:layout_gravity="center"
             android:text="@string/had_close" />
   
     
    
         <Button
	        android:id="@+id/flash_front_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/openfront_flash"
	        android:layout_marginTop="30dp"
			android:layout_gravity="center"
	        android:background="@drawable/selector_button"
	        android:textSize="20sp"
	        android:padding="20dp"
	        android:textStyle="bold" />
   
</LinearLayout>