<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/floralwhite" >

    <CheckedTextView
        android:id="@+id/checkedTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkedTextView1"
        android:layout_toRightOf="@+id/reboot_checkBox"
        android:text="@string/reboot_tip1" 
        android:textSize="15sp"/>

    <CheckBox
        android:id="@+id/reboot_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="158dp"
        android:layout_toLeftOf="@+id/reboot_button" />

    <CheckedTextView
        android:id="@+id/checkedTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/reboot_checkBox"
        android:layout_marginLeft="76dp"
        android:text="@string/reboot_tip"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/disreboot_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reboot_checkBox"
        android:layout_below="@+id/checkedTextView2"
        android:layout_marginTop="26dp"
        android:textSize="20sp" 
        android:text="@string/ckdisablereboot" />

    <Button
        android:id="@+id/reboot_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkedTextView1"
        android:layout_below="@+id/disreboot_checkBox"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="60dp"
        android:textSize="20sp"
        android:background="@drawable/selector_button"
        android:text="@string/rebootphone" />

</RelativeLayout>
